# hackoort

./: .gitignore  CMakeLists.txt  README.md  hackoort.pc.in
docker/: Dockerfile  Dockerfile-devel  Dockerfile-oorthap  Makefile  authorized_keys  docker-compose.yml  pi.sh  requirements.txt
docker/state/: .gitignore  oort.yaml
include/: hackoort.h
oorttool/: CMakeLists.txt  oorttool.c
python/: requirements.txt
python/hackoort/: __init__.py  bulb.py  errors.py
python/oortapi/: __init__.py  app.py  errors.py  wsgi.py
python/oortapi/endpoints/: __init__.py  color.py  onoff.py  status.py
python/oorthap/: __main__.py  bulb.py
src/: libhackoort.c
